SampleWebApp/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleapp
spec:
  selector:
    matchLabels:
      app: sampleapp
  template:
    metadata:
      labels:
        app: sampleapp
    spec:
      volumes:
        - name: initscript
          configMap:
            name: sqlinitscript
      containers:
        - name: sampleapp
          image: claudeglauser/sample-webapp:latest
          resources:
            requests:
              memory: "100Mi"
              cpu: "0.25"
            limits:
              memory: "1000Mi"
              cpu: "1"
        - name: postgresql
          image: postgres
          resources:
            requests:
              memory: "100Mi"
              cpu: "0.25"
            limits:
              memory: "1000Mi"
              cpu: "1"
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: initscript
